--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,7 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="transparent">#00FFFFFF</color>
+    <color name="main_background">#F6F6F9</color>
+    <color name="button_background">#0D72FF</color>
+    <color name="gray">#ADADAD</color>
 </resources>
