--- a/app/src/main/res/layout/fragment_hotel.xml
+++ b/app/src/main/res/layout/fragment_hotel.xml
@@ -22,18 +22,16 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:padding="16dp"
-                >
+                android:padding="16dp">
 
                 <androidx.cardview.widget.CardView
-                    android:id="@+id/cardView"
+                    android:id="@+id/cv_photo"
                     android:layout_width="match_parent"
                     android:layout_height="250dp"
                     app:cardCornerRadius="16dp"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toTopOf="parent">
-                    <!--                    app:cardElevation="0dp"-->
-                    <!--                    >-->
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:cardElevation="0dp">
 
                     <androidx.viewpager2.widget.ViewPager2
                         android:id="@+id/view_pager"
@@ -59,36 +57,57 @@
                             app:tabIndicatorHeight="0dp"
                             />
                     </androidx.cardview.widget.CardView>
+                </androidx.cardview.widget.CardView>
 
-
+                <androidx.cardview.widget.CardView
+                    android:id="@+id/cv_grade"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/cv_photo"
+                    android:backgroundTint="@color/orange_lite"
+                    app:cardCornerRadius="6dp"
+                    app:cardElevation="0dp"
+                    android:layout_marginVertical="10dp"
+                    >
+                    <TextView
+                        android:id="@+id/tv_grade"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="5 Превосходно"
+                        android:padding="6dp"
+                        android:textSize="16sp"
+                        android:textColor="@color/orange"
+                        app:drawableLeftCompat="@drawable/ic_baseline_star_24" />
                 </androidx.cardview.widget.CardView>
 
                 <TextView
-                    android:id="@+id/textView"
-                    android:layout_width="wrap_content"
+                    android:id="@+id/tv_hotel_name"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="32dp"
-                    android:text="Название отеля"
-                    app:layout_constraintTop_toBottomOf="@+id/cardView"
+                    android:text="Steigenberger Makadi"
+                    android:padding="6dp"
+                    android:textSize="22sp"
+                    android:textStyle="bold"
+                    android:textColor="@color/black"
                     app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/cv_grade"
                     app:layout_constraintStart_toStartOf="parent"
-                     />
+                    app:layout_constraintEnd_toEndOf="parent"
+                    />
+
             </androidx.constraintlayout.widget.ConstraintLayout>
-
-
         </androidx.cardview.widget.CardView>
-
 
         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:background="@color/white"
-            app:cardElevation="0dp"
             >
 
             <com.google.android.material.button.MaterialButton
+                android:id="@+id/mb_choose_room"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
