--- a/app/src/main/res/layout/item_pager.xml
+++ b/app/src/main/res/layout/item_pager.xml
@@ -10,7 +10,7 @@
         android:id="@+id/imageView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/img"
+        android:src="@drawable/img_hotel"
         android:scaleType="centerCrop"
         />
 
