--- a/app/src/main/res/layout/fragment_hotel.xml
+++ b/app/src/main/res/layout/fragment_hotel.xml
@@ -24,39 +24,12 @@
                 android:orientation="vertical"
                 android:padding="16dp">
 
-                <androidx.cardview.widget.CardView
+                <include
                     android:id="@+id/cv_photo"
-                    android:layout_width="match_parent"
-                    android:layout_height="250dp"
-                    app:cardCornerRadius="16dp"
+                    layout="@layout/view_image"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    app:cardElevation="0dp">
-
-                    <androidx.viewpager2.widget.ViewPager2
-                        android:id="@+id/view_pager"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:orientation="horizontal" />
-
-                    <androidx.cardview.widget.CardView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="bottom|center"
-                        app:cardCornerRadius="6dp"
-                        android:backgroundTint="@color/white"
-                        android:layout_margin="12dp"
-                        >
-                        <com.google.android.material.tabs.TabLayout
-                            android:id="@+id/tab_dots"
-                            android:layout_width="wrap_content"
-                            android:layout_height="20dp"
-                            app:tabMode="fixed"
-                            app:tabBackground="@drawable/tab_selector"
-                            app:tabIndicatorHeight="0dp"
-                            />
-                    </androidx.cardview.widget.CardView>
-                </androidx.cardview.widget.CardView>
+                    />
 
                 <androidx.cardview.widget.CardView
                     android:id="@+id/cv_grade"
