--- a/app/src/main/res/layout/fragment_choice_room.xml
+++ b/app/src/main/res/layout/fragment_choice_room.xml
@@ -4,14 +4,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.ChoiceOfHotelRoomFragment">
+    android:background="@color/main_background"
+    tools:context=".ui.ChoiceRoomFragment">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_hotel_rooms"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:listitem="@layout/item_room"
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        />
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
 
 </FrameLayout>
