--- a/app/src/main/res/layout/item_room.xml
+++ b/app/src/main/res/layout/item_room.xml
@@ -1,138 +1,102 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<androidx.cardview.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
-
-    <androidx.cardview.widget.CardView
+    app:cardCornerRadius="16dp"
+    android:layout_marginTop="8dp"
+    app:cardElevation="0dp">
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:cardCornerRadius="16dp"
-        app:cardElevation="0dp"
-        android:layout_marginTop="-10dp">
-        <androidx.constraintlayout.widget.ConstraintLayout
+        android:orientation="vertical"
+        android:padding="16dp">
+        <include
+            android:id="@+id/cv_photo"
+            layout="@layout/view_image"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+        <TextView
+            android:id="@+id/tv_room_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:padding="16dp">
-
-            <include
-                android:id="@+id/cv_photo"
-                layout="@layout/view_image"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                />
-
+            android:paddingVertical="6dp"
+            android:textSize="22sp"
+            android:textStyle="bold"
+            android:textColor="@color/black"
+            app:layout_constraintTop_toBottomOf="@+id/cv_photo"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
+        <com.google.android.flexbox.FlexboxLayout
+            android:id="@+id/fbl_peculiarities"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:flexWrap="wrap"
+            app:alignItems="stretch"
+            app:alignContent="stretch"
+            app:layout_constraintTop_toBottomOf="@+id/tv_room_name"
+            app:layout_constraintStart_toStartOf="parent">
+        </com.google.android.flexbox.FlexboxLayout>
+        <androidx.cardview.widget.CardView
+            android:id="@+id/cv_about_room"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@+id/fbl_peculiarities"
+            app:layout_constraintStart_toStartOf="parent"
+            android:backgroundTint="@color/button_background_lite"
+            app:cardCornerRadius="6dp"
+            app:cardElevation="0dp"
+            android:layout_marginVertical="10dp">
             <TextView
-                android:id="@+id/tv_room_name"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Стандартный номер с видом на бассейн"
-                android:paddingVertical="6dp"
-                android:textSize="22sp"
-                android:textStyle="bold"
-                android:textColor="@color/black"
-                app:layout_constraintTop_toBottomOf="@+id/cv_photo"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent" />
-            <com.google.android.flexbox.FlexboxLayout
-                android:id="@+id/fbl_peculiarities"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:flexWrap="wrap"
-                app:alignItems="stretch"
-                app:alignContent="stretch"
-                app:layout_constraintTop_toBottomOf="@+id/tv_room_name"
-                app:layout_constraintStart_toStartOf="parent"
-                >
-                <androidx.cardview.widget.CardView
-                    android:id="@+id/cv_peculiarities"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:backgroundTint="@color/gray_for_peculiarities"
-                    app:cardCornerRadius="6dp"
-                    app:cardElevation="0dp"
-                    android:layout_marginVertical="10dp">
-                    <TextView
-                        android:id="@+id/tv_peculiarities"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Включен только завтрак"
-                        android:padding="6dp"
-                        android:textSize="16sp"
-                        android:textColor="@color/hint"
-                        app:layout_alignSelf="center"
-                        />
-                </androidx.cardview.widget.CardView>
-            </com.google.android.flexbox.FlexboxLayout>
-            <androidx.cardview.widget.CardView
-                android:id="@+id/cv_about_room"
+                android:id="@+id/tv_about_room"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:layout_constraintTop_toBottomOf="@+id/fbl_peculiarities"
-                app:layout_constraintStart_toStartOf="parent"
-                android:backgroundTint="@color/button_background_lite"
-                app:cardCornerRadius="6dp"
-                app:cardElevation="0dp"
-                android:layout_marginVertical="10dp">
-                <TextView
-                    android:id="@+id/tv_about_room"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Подробнее о номере"
-                    android:padding="6dp"
-                    android:textSize="16sp"
-                    android:textColor="@color/button_background"
-                    app:layout_alignSelf="center"
-                    app:drawableRightCompat="@drawable/ic_arrow_blue"
-                    />
-            </androidx.cardview.widget.CardView>
-            <TextView
-                android:id="@+id/tv_hotel_minimal_price"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAllCaps="false"
-                android:textSize="30sp"
-                android:text="186 600 ₽"
-                android:paddingVertical="12dp"
-                android:textAlignment="textStart"
-                android:textColor="@color/black"
-                android:background="@color/white"
-                android:textStyle="bold"
-                app:layout_constraintTop_toBottomOf="@+id/cv_about_room"
-                app:layout_constraintStart_toStartOf="parent"
-                />
-            <TextView
-                android:id="@+id/tv_hotel_price_for_it"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAllCaps="false"
-                android:textSize="16sp"
-                android:text="За 7 ночей с перелетом"
-                android:textAlignment="textStart"
-                android:textColor="@color/hint"
-                android:background="@color/white"
+                android:text="@string/more_about_room"
                 android:padding="6dp"
-                app:layout_constraintStart_toEndOf="@+id/tv_hotel_minimal_price"
-                app:layout_constraintTop_toBottomOf="@+id/cv_about_room"
-                app:layout_constraintBottom_toTopOf="@+id/mb_choose_room"
-                />
-            <com.google.android.material.button.MaterialButton
-                android:id="@+id/mb_choose_room"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:layout_constraintTop_toBottomOf="@+id/tv_hotel_minimal_price"
-                android:layout_gravity="center"
-                android:backgroundTint="@color/button_background"
-                android:padding="16dp"
-                android:text="@string/choose_room"
-                android:textAllCaps="false"
-                android:textColor="@color/white"
-                app:cornerRadius="16dp"
                 android:textSize="16sp"
-                />
-        </androidx.constraintlayout.widget.ConstraintLayout>
-    </androidx.cardview.widget.CardView>
-</LinearLayout>
+                android:textColor="@color/button_background"
+                app:layout_alignSelf="center"
+                app:drawableRightCompat="@drawable/ic_arrow_blue" />
+        </androidx.cardview.widget.CardView>
+        <TextView
+            android:id="@+id/tv_room_price"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAllCaps="false"
+            android:textSize="30sp"
+            android:paddingVertical="12dp"
+            android:textAlignment="textStart"
+            android:textColor="@color/black"
+            android:background="@color/white"
+            android:textStyle="bold"
+            app:layout_constraintTop_toBottomOf="@+id/cv_about_room"
+            app:layout_constraintStart_toStartOf="parent" />
+        <TextView
+            android:id="@+id/tv_room_price_for_it"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAllCaps="false"
+            android:textSize="16sp"
+            android:textAlignment="textStart"
+            android:textColor="@color/hint"
+            android:background="@color/white"
+            android:padding="6dp"
+            app:layout_constraintStart_toEndOf="@+id/tv_room_price"
+            app:layout_constraintTop_toBottomOf="@+id/cv_about_room"
+            app:layout_constraintBottom_toTopOf="@+id/mb_choose_room" />
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/mb_choose_room"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@+id/tv_room_price"
+            android:layout_gravity="center"
+            android:backgroundTint="@color/button_background"
+            android:padding="16dp"
+            android:text="@string/choose_room"
+            android:textAllCaps="false"
+            android:textColor="@color/white"
+            app:cornerRadius="16dp"
+            android:textSize="16sp" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.cardview.widget.CardView>
