--- a/app/src/main/res/layout/view_image.xml
+++ b/app/src/main/res/layout/view_image.xml
@@ -7,28 +7,24 @@
     android:layout_height="250dp"
     app:cardCornerRadius="16dp"
     app:cardElevation="0dp">
-
     <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/view_pager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="horizontal" />
-
     <androidx.cardview.widget.CardView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|center"
         app:cardCornerRadius="6dp"
         android:backgroundTint="@color/white"
-        android:layout_margin="12dp"
-        >
+        android:layout_margin="12dp">
         <com.google.android.material.tabs.TabLayout
             android:id="@+id/tab_dots"
             android:layout_width="wrap_content"
             android:layout_height="20dp"
             app:tabMode="fixed"
             app:tabBackground="@drawable/tab_selector"
-            app:tabIndicatorHeight="0dp"
-            />
+            app:tabIndicatorHeight="0dp" />
     </androidx.cardview.widget.CardView>
 </androidx.cardview.widget.CardView>
