--- a/app/src/main/res/layout/fragment_order_paid.xml
+++ b/app/src/main/res/layout/fragment_order_paid.xml
@@ -1,69 +1,70 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.core.widget.NestedScrollView
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
-    tools:context=".ui.HotelFragment">
-    <LinearLayout
+    android:orientation="vertical"
+    android:padding="16dp">
+    <Space
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
+        android:layout_height="0dp"
+        android:layout_weight="0.4"/>
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cv_party_popper"
+        android:layout_width="94dp"
+        android:layout_height="94dp"
         android:layout_gravity="center"
-        >
-        <androidx.cardview.widget.CardView
-            android:layout_width="94dp"
-            android:layout_height="94dp"
-            app:cardCornerRadius="47dp"
-            android:backgroundTint="@color/main_background"
+        android:backgroundTint="@color/main_background"
+        app:cardCornerRadius="47dp"
+        app:cardElevation="0dp"
+        android:layout_marginVertical="16dp">
+        <ImageView
+            android:layout_width="44dp"
+            android:layout_height="44dp"
             android:layout_gravity="center"
-            >
-            <ImageView
-                android:layout_width="44dp"
-                android:layout_height="44dp"
-                android:src="@drawable/img_party_popper"
-                android:layout_gravity="center" />
-        </androidx.cardview.widget.CardView>
-
-        <TextView
-            android:id="@+id/tv_order_in_work"
+            android:src="@drawable/img_party_popper"
+            android:contentDescription="@string/image" />
+    </androidx.cardview.widget.CardView>
+    <TextView
+        android:id="@+id/tv_order_in_work"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/order_has_been_processed"
+        android:padding="6dp"
+        android:textSize="22sp"
+        android:textStyle="bold"
+        android:textAlignment="center"
+        android:textColor="@color/black"/>
+    <TextView
+        android:id="@+id/tv_confirmation_order"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/order_paid_description"
+        android:padding="6dp"
+        android:textSize="16sp"
+        android:textAlignment="center"
+        android:textColor="@color/hint"/>
+    <Space
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="0.6"/>
+    <androidx.cardview.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:background="@color/white">
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/mb_super"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Ваш заказ принят в работу"
-            android:padding="6dp"
-            android:textSize="22sp"
-            android:textStyle="bold"
-            android:textAlignment="center"
-            android:textColor="@color/black"/>
-        <TextView
-            android:id="@+id/tv_confirmation_order"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Подтверждение заказа №104893 может занять некоторое время (от 1 часа до суток). Как только мы получим ответ от туроператора, вам на почту придет уведомление."
-            android:padding="6dp"
-            android:textSize="16sp"
-            android:textAlignment="center"
-            android:textColor="@color/hint"/>
-        <androidx.cardview.widget.CardView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:background="@color/white">
-            <com.google.android.material.button.MaterialButton
-                android:id="@+id/mb_choose_room"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:backgroundTint="@color/button_background"
-                android:padding="16dp"
-                android:text="@string/_super"
-                android:textAllCaps="false"
-                android:textColor="@color/white"
-                app:cornerRadius="16dp"
-                android:textSize="16sp"
-                android:layout_marginHorizontal="16dp" />
-        </androidx.cardview.widget.CardView>
-    </LinearLayout>
-</androidx.core.widget.NestedScrollView>
+            android:layout_gravity="center"
+            android:backgroundTint="@color/button_background"
+            android:padding="16dp"
+            android:text="@string/_super"
+            android:textAllCaps="false"
+            android:textColor="@color/white"
+            app:cornerRadius="16dp"
+            android:textSize="16sp" />
+    </androidx.cardview.widget.CardView>
+</LinearLayout>
