--- a/app/src/main/res/layout/fragment_booking.xml
+++ b/app/src/main/res/layout/fragment_booking.xml
@@ -189,9 +189,234 @@
                         android:textSize="16sp"
                         android:textColor="@color/black" />
                 </TableRow>
+            </TableLayout>
+        </androidx.cardview.widget.CardView>
 
+        <androidx.cardview.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:cardCornerRadius="16dp"
+            android:layout_marginTop="8dp"
+            app:cardElevation="0dp">
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/container_info_buyer"
+                android:padding="16dp">
+                <TextView
+                    android:id="@+id/tv_info_buyer"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintTop_toTopOf="parent"
+                    android:text="@string/buyer_information"
+                    android:textSize="22sp"
+                    android:textColor="@color/black"
+                    android:textStyle="bold"
+                    android:paddingBottom="16dp"
+                    />
+                <androidx.cardview.widget.CardView
+                    android:id="@+id/cv_phone"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintTop_toBottomOf="@+id/tv_info_buyer"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:cardElevation="0dp"
+                    app:cardCornerRadius="10dp"
+                    app:cardBackgroundColor="@color/main_background">
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical"
+                        android:padding="10dp">
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="@string/phone"
+                            android:textSize="12sp"
+                            android:textColor="@color/hint" />
+                        <androidx.appcompat.widget.AppCompatEditText
+                            android:id="@+id/et_phone"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:hint="@string/phone_mask"
+                            android:textSize="16sp"
+                            android:textColor="@color/black_lite"
+                            android:inputType="phone"
+                            android:padding="0dp"
+                            android:background="@color/transparent"
+                            android:focusable="true"
+                            android:focusableInTouchMode="true" />
+                    </LinearLayout>
+                </androidx.cardview.widget.CardView>
+                <androidx.cardview.widget.CardView
+                    android:id="@+id/cv_mail"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintTop_toBottomOf="@+id/cv_phone"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:cardElevation="0dp"
+                    android:layout_marginTop="8dp"
+                    app:cardCornerRadius="10dp"
+                    app:cardBackgroundColor="@color/main_background">
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical"
+                        android:padding="10dp">
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="@string/email"
+                            android:textSize="12sp"
+                            android:textColor="@color/hint" />
+                        <androidx.appcompat.widget.AppCompatEditText
+                            android:id="@+id/et_mail"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:hint="@string/email_hint"
+                            android:textSize="16sp"
+                            android:textColor="@color/black_lite"
+                            android:autofillHints="phone"
+                            android:inputType="textEmailAddress"
+                            android:padding="0dp"
+                            android:background="@color/transparent"
+                            android:focusable="true"
+                            android:focusableInTouchMode="true" />
+                    </LinearLayout>
+                </androidx.cardview.widget.CardView>
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintTop_toBottomOf="@+id/cv_mail"
+                    android:text="@string/information"
+                    android:textColor="@color/hint"
+                    android:textSize="14sp"
+                    android:paddingTop="8dp"/>
+            </androidx.constraintlayout.widget.ConstraintLayout>
+        </androidx.cardview.widget.CardView>
 
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rv_tourists"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            tools:listitem="@layout/item_tourist"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
 
+        <androidx.cardview.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:cardCornerRadius="16dp"
+            android:layout_marginTop="8dp"
+            app:cardElevation="0dp">
+            <TextView
+                android:id="@+id/tv_add_tourist"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toTopOf="parent"
+                android:text="@string/add_tourist"
+                android:textSize="22sp"
+                android:textColor="@color/black"
+                android:textStyle="bold"
+                android:padding="16dp"
+                />
+            <androidx.cardview.widget.CardView
+                android:id="@+id/cv_add_tourist"
+                android:layout_width="35dp"
+                android:layout_height="35dp"
+                app:cardCornerRadius="8dp"
+                android:padding="16dp"
+                android:layout_marginEnd="16dp"
+                android:layout_gravity="end|center"
+                android:backgroundTint="@color/button_background">
+                <ImageView
+                    android:id="@+id/iv_add_tourist"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/add_tourist"
+                    android:contentDescription="@string/image" />
+            </androidx.cardview.widget.CardView>
+        </androidx.cardview.widget.CardView>
+
+        <androidx.cardview.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:cardCornerRadius="16dp"
+            android:layout_marginTop="8dp"
+            app:cardElevation="0dp">
+            <TableLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:paddingHorizontal="16dp">
+                <TableRow android:paddingVertical="8dp">
+                    <TextView
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="2"
+                        android:text="@string/tour"
+                        android:textSize="16sp"
+                        android:textColor="@color/hint" />
+                    <TextView
+                        android:id="@+id/tv_tour_price"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="3"
+                        android:textSize="16sp"
+                        android:gravity="end"
+                        android:textColor="@color/black" />
+                </TableRow>
+                <TableRow android:paddingVertical="8dp">
+                    <TextView
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="2"
+                        android:text="@string/fuel_charge"
+                        android:textSize="16sp"
+                        android:textColor="@color/hint" />
+                    <TextView
+                        android:id="@+id/tv_fuel_charge"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="3"
+                        android:textSize="16sp"
+                        android:gravity="end"
+                        android:textColor="@color/black" />
+                </TableRow>
+                <TableRow android:paddingVertical="8dp">
+                    <TextView
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="2"
+                        android:text="@string/service_charge"
+                        android:textSize="16sp"
+                        android:textColor="@color/hint" />
+                    <TextView
+                        android:id="@+id/tv_service_charge"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="3"
+                        android:textSize="16sp"
+                        android:gravity="end"
+                        android:textColor="@color/black" />
+                </TableRow>
+                <TableRow android:paddingVertical="8dp">
+                    <TextView
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="2"
+                        android:text="@string/to_buy"
+                        android:textSize="16sp"
+                        android:textColor="@color/hint" />
+                    <TextView
+                        android:id="@+id/tv_to_pay"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="3"
+                        android:gravity="end"
+                        android:textSize="16sp"
+                        android:textColor="@color/button_background" />
+                </TableRow>
             </TableLayout>
         </androidx.cardview.widget.CardView>
 
@@ -207,7 +432,7 @@
                 android:layout_gravity="center"
                 android:backgroundTint="@color/button_background"
                 android:padding="16dp"
-                android:text="Оплатить"
+                android:text="@string/to_pay"
                 android:textAllCaps="false"
                 android:textColor="@color/white"
                 app:cornerRadius="16dp"
